# abmoid

./: .gitignore  CMakeLists.txt  cppdock.json
example/sir_model/: Makefile  main.cpp  plot.gnuplot
example/sir_social/: Makefile  benchmark.cpp  country_connections.hpp  national_pops.hpp  pandemic.cpp  peak_infections.cpp  peak_infections_mc.cpp  peak_times.hpp  plot.gnuplot  plot_benchmark.gnuplot  plot_pandemic.gnuplot  plot_pandemic_time_series.gnuplot  plot_peak_times.gnuplot  plot_peak_times_2.gnuplot  plot_peak_times_mc_1.gnuplot  plot_sir_network.gnuplot  plot_sir_network_graph.gnuplot  sir_network.cpp  sir_social.cpp  sir_social.hpp
include/abmoid/: agent.hpp  agent_component.hpp  rk4.hpp
proto/: Makefile  main.cpp  main2.cpp
